# HuffmanCoding

./: CMakeLists.txt  PKGBUILD  README.md  huffman-coding-1.0-1-x86_64.pkg.tar.xz
huffman/: CMakeLists.txt  encoder.cpp  encoder.h  main.cpp
libhuffmancoding/: CMakeLists.txt  huffmancoding.cpp  huffmancoding.h
man/huffman/: huffman.1
